<?xml version="1.0" encoding="utf-8"?>
<com.balysv.materialripple.MaterialRippleLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  style="@style/rippleButton"
>

  <com.google.android.flexbox.FlexboxLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@drawable/border_bottom"
    app:justifyContent="space_between"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
  >
    <com.google.android.flexbox.FlexboxLayout
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      app:alignItems="center"
      app:justifyContent="center"
      app:flexDirection="column"
    >
      <TextView
        app:layout_flexShrink="0"
        android:id="@+id/label_title"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:paddingLeft="2dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_triple"
        android:textColor="@color/text_dark"
        android:textAllCaps="true"
        android:background="@android:color/transparent"
      />
      <com.google.android.flexbox.FlexboxLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:justifyContent="flex_start"
        app:alignItems="center"
      >
        <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:src="@drawable/ic_clock_a"
        />
        <TextView
          style="@style/altContent"
          android:id="@+id/text_last_update"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lorem_time"
        />
        <View
          app:layout_flexShrink="0"
          app:layout_flexGrow="0"
          android:layout_width="1dp"
          android:layout_height="14sp"
          android:background="@color/text_light"
          android:layout_marginLeft="4dp"
          android:layout_marginRight="4dp"
        />
        <TextView
          style="@style/altContent"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/text_label_source"
          android:text="@string/lorem_triple"
        />

      </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
      app:layout_flexGrow="0"
      app:layout_flexShrink="0"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    >
      <com.google.android.flexbox.FlexboxLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:alignItems="center"
        app:justifyContent="center"
        app:flexDirection="column"
        app:layout_flexGrow="0"
        app:layout_flexShrink="0"
      >
        <TextView
          app:layout_flexShrink="0"
          app:layout_flexGrow="0"
          android:textSize="20sp"
          android:id="@+id/label_change_percents"
          app:layout_alignSelf="flex_end"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/lorem_triple"
          android:textAlignment="textEnd"
          android:textColor="@color/text_dark"
          android:textAllCaps="true"
          android:paddingLeft="2dp"
          android:paddingRight="2dp"
          android:background="@android:color/transparent"
        />
        <com.google.android.flexbox.FlexboxLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:justifyContent="flex_end"
        >
          <TextView
            app:layout_flexGrow="0"
            app:layout_flexShrink="0"
            android:textColor="@color/text_dark"
            android:id="@+id/text_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_numbers"
            android:layout_marginRight="4dp"
          />
          <TextView
            app:layout_flexGrow="0"
            app:layout_flexShrink="0"
            style="@style/altContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="("
          />
          <TextView
            app:layout_flexGrow="0"
            app:layout_flexShrink="0"
            android:textColor="@color/text_dark"
            android:id="@+id/text_change_absolute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_numbers"
          />
          <TextView
            app:layout_flexGrow="0"
            app:layout_flexShrink="0"
            style="@style/altContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=")"
          />
        </com.google.android.flexbox.FlexboxLayout>

      </com.google.android.flexbox.FlexboxLayout>
      <ImageView
        app:layout_flexGrow="0"
        app:layout_flexShrink="0"
        android:layout_marginLeft="16dp"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_right"
      />
    </com.google.android.flexbox.FlexboxLayout>

  </com.google.android.flexbox.FlexboxLayout>

</com.balysv.materialripple.MaterialRippleLayout>